--- a/27-06-24/assets/css/style.css
+++ b/27-06-24/assets/css/style.css
@@ -9,6 +9,10 @@
 .container {
     max-width: 992px;
     margin: 0 auto;
+    
+}
+main {
+    margin-bottom: 1.5rem;
 }
 h1 {
     font-size: 4em;
@@ -18,4 +22,57 @@ h2 {
     font-size: 36px;
     font-weight: 700;
     margin-bottom: 1rem;
+}
+h4 {
+    margin-bottom: 1.5rem;
+}
+#addMeeting div{
+    display: inline-block;
+    vertical-align: bottom;
+    margin-right: 3em;
+}
+form {
+    display: inline;
+}
+input {
+    width: 130px;
+    min-height: 36px;
+    background-color: #0c0b1d;
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+    font-weight: 700;
+    color: #ebebeb;
+}
+input:focus {
+    background-color: #2d2a59;
+}
+input:focus::placeholder {
+    color: #615d9c;
+}
+#newMeetingDay {
+    display: inline-block;
+    min-height: 40px;
+}
+#newMeetingName {
+    width: 200px;
+}
+#newMeetingTime::-webkit-calendar-picker-indicator { 
+    background-color: #7a408a;
+    border-radius: 50%;
+    cursor: pointer;
+}
+form button {
+    cursor: pointer;
+    background-color: #7a408a;
+    color: #efd7f5;
+    border: none;
+    border-radius: 5px;
+    width: 130px;
+    min-height: 36px;
+    font-weight: 700;
+    padding: 10px;
+}
+#appointments {
+    display: none;
 }
