--- a/27-06-24/assets/css/style.css
+++ b/27-06-24/assets/css/style.css
@@ -57,7 +57,7 @@ input:focus::placeholder {
 #newMeetingName {
     width: 200px;
 }
-#newMeetingTime::-webkit-calendar-picker-indicator { 
+#newMeetingTime::-webkit-calendar-picker-indicator { /* webkit da cercare online */
     background-color: #7a408a;
     border-radius: 50%;
     cursor: pointer;
