--- a/27-06-24/assets/css/style.css
+++ b/27-06-24/assets/css/style.css
@@ -18,6 +18,30 @@ h1 {
     font-size: 4em;
     font-weight: 900;
 }
+.day {
+    display: inline-block;
+    width: 14%;
+    height: 130px;
+    position: relative;
+    border: 1px solid transparent;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.day:hover {
+    background-color: #15132e;
+}
+.day h3 {
+    text-align: center;
+    font-size: 26px;
+    margin: 0;
+    position: absolute;
+    top: 40%;
+    left: 0;
+    right: 0;
+}
+.day .selected {
+    border-color: #7a408a;
+}
 h2 {
     font-size: 36px;
     font-weight: 700;
