--- a/27-06-24/assets/css/style.css
+++ b/27-06-24/assets/css/style.css
@@ -42,6 +42,15 @@ h1 {
 .day .selected {
     border-color: #7a408a;
 }
+.dot{
+    position: absolute;
+    left: 45%;
+    bottom: 20px;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background-color: #7a408a;
+}
 h2 {
     font-size: 36px;
     font-weight: 700;
